--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "eslint-config-next": "13.0.6",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
+    "highcharts": "^10.3.2",
+    "highcharts-react-official": "^3.1.0",
     "next": "13.0.6",
     "path": "^0.12.7",
     "react": "18.2.0",
