--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gray-matter": "^4.0.3",
     "highcharts": "^10.3.2",
     "highcharts-react-official": "^3.1.0",
+    "isomorphic-unfetch": "^4.0.2",
     "next": "13.0.6",
     "path": "^0.12.7",
     "react": "18.2.0",
